--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Hello World</title>
+</head>
+<body>
+    <h1> CV </h1>
+    <p>This is a paragrah</p>
+</body>
+</html>
