--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hello World</title>
+    <title>Siraj Ul-Haq</title>
 </head>
 <body>
-    <h1> CV </h1>
-    <p>This is a paragrah</p>
+    <h1> Welcome to my website</h1>
+    <p>Hi my name is: Siraj Ul-Haq<br>
+        I am interested in Maths and programming<br>
+        I am currently learning python(and django)</p>
 </body>
 </html>
