--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Siraj Ul-Haq</title>
 </head>
 <body>
-    <h1> Welcome to my website</h1>
+    <h1> <center> Siraj Ul-Haq </center></h1>
     <p>Hi my name is: Siraj Ul-Haq<br>
         I am interested in Maths and programming<br>
         I am currently learning python(and django)</p>
