added dark mode switch

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
         <p>Hi my name is: Siraj Ul-Haq<br>
         I am interested in Maths and programming<br>
         I am currently learning python(and django)</p>
-            
+
+        <!-- dark mode switch-->
+        
+        <form>
+            <div class="custom-control custom-switch">
+              <input type="checkbox" class="custom-control-input" id="switch1">
+              <label class="custom-control-label" for="switch1">Dark Mode</label>
+            </div>
+          </form>
+
 
 </body>
 </html>
