--- a/index.html
+++ b/index.html
@@ -20,20 +20,43 @@
     <title>Siraj Ul-Haq</title>
 </head>
 <body>
-    <h1> <center> Siraj Ul-Haq </center></h1>
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <h1>Siraj Ul-Haq</h1>
+        <p>Welcome to my personal website</p> 
+      </div>      
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <a class="navbar-brand" href="#">Welcome</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>    
+          </ul>
+        </div>  
+      </nav>
+        <!-- <h1> <center> Siraj Ul-Haq </center></h1>
         <p>Hi my name is: Siraj Ul-Haq<br>
         I am interested in Maths and programming<br>
-        I am currently learning python(and django)</p>
+        I am currently learning python(and django)</p> 
+        -->
 
-        <!-- dark mode switch-->
-        
+        <!-- 
         <form>
             <div class="custom-control custom-switch">
               <input type="checkbox" class="custom-control-input" id="switch1">
               <label class="custom-control-label" for="switch1">Dark Mode</label>
             </div>
           </form>
-
+        -->
 
 </body>
 </html>
